style.css
h3 {
    opacity: 0;
    transition: opacity 1s;
}

body {
    overflow-x: hidden;
}

main>.container {
    margin-top: 50px;
    margin-bottom: 20px;
    background-color: #ffffff;
}

h3 {
    font-weight: 700;
}
.fade-in
{
    opacity:  0;
    transition: opacity 2s ease;
    animation: fadein 0.5s linear forwards;

}
.fade-out
{
    opacity:  1;
    transition: opacity 2s ease;
    animation: fadeout 0.5s linear forwards;
}
.grow-shrink
{
    transform-origin: center;
    animation: grow-shrink 60s linear infinite;
}
.white
{
    
    color: #212121ff;
}
.topbar-item
{
    color: #ffffff72; 
    font-family: Raleway;
    padding: 5px 0px 0px;
    transition: color 0.2s, scale 0.2s, padding 0.2s, font-weight 0.2s ;
}
.topbar-item:hover
{
    color: #00bbff72; 
    font-weight: 500;
    scale: 105%;
    padding: 5px 3px 0px;
    transition: color 0.2s, scale 0.2s, padding 0.2s, font-weight 0.2s ;
    text-shadow:1px 1px 10px #00bbff72;
}
.topbar-item:active
{ 
    color: #00bbffff; 
    font-weight: 500;
    scale: 95%;
    animation: blinker 0.05s linear infinite;
    transition: color 0.2s, scale 0.2s, padding 0.2s, font-weight 0.2s ;   
}
  
@keyframes blinker {
    50% 
    {
      opacity: 0;
    }
  }
  @keyframes fadeout {
    0% 
    {
      opacity: 1;
    }
    100%
    {
        opacity: 0;
    }
  }
  @keyframes fadein {
    0% 
    {
      opacity: 0;
    }
    100%
    {
        opacity: 1;
    }
  }  @keyframes grow-shrink {
    0% 
    {
      scale: 100%;
    }
    50%
    {
        scale: 120%;
    } 
    100%
    {
        scale: 100%;
    }
  }
.separator
{
    background-color: white;
    width: 1px;
    opacity: 10%;
}
.fab {
    padding: 20px;
    color: black;
    text-align: center;
    text-decoration: none;
    border-radius: 50%;
    font-size: 120px;
  }
/* Sets the variables up(?) */
.monospace,
.text-ms {
    opacity: 1;
    transition: transform 2s, opacity 2s;
    z-index: 0;
    background-clip: padding-box !important;
    padding: 30px;
    display: flex;
    flex-direction: column;
    align-items: center;
}


.image-view {
    opacity: 0;
    transition: transform 2s, opacity 2s;
    z-index: 0;
    background-clip: content-box !important;
    padding: 50px;
    display: flex;
    max-width: 100vw;
    height: auto;
    justify-content: center;
}

.wrapper {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
}

.monospace h2 {
    color: #1e1e1e;
    font-weight: 700;
    transform: translateY(50%);
    text-align: center;
}

.text-ms h1 {
    color: #1e1e1e;
    font-weight: 700;
    transform: translateY(50%);
    text-align: left;
    font-size: 55px;
}

.text-ms h2 {
    color: #1e1e1e;
    font-weight: 500;
    transform: translateY(50%);
    text-align: left;
}

.monospace h3,
.text-ms h3 {
    color: #1e1e1e;
    font-size: 25px;
    transform: translateY(5%);
    font-weight: 400;
    padding: 30px;
    text-align: center;
}

.monospace a:hover,
.text-ms a:hover {
    background: linear-gradient(180deg, #0000 0%, #cfd0d2 100%);
    text-decoration: none;
}

/* monospace button in the main page. */
.monospace {

    background: radial-gradient(#ebebebd1 0%, #cfd0d2 100%);
    border: solid 1px #1e1e1e;
    transition: background-color 0.2s ease, scale 0.2s ease;
    /* transform: translateX(-200%); */
}

.monospace:hover
{
    background-color: rgb(30, 129, 195);
    border: solid 1px rgb(0, 153, 255);
    scale: 110%;
    transition: background-color 0.2s ease, border 0.2s ease, scale 0.2s ease;
}
.monospace:active
{
    scale: 70%;
}

.text-ms {
    opacity: 0;
    /* transform: translateX(-200%); */
}

main img {
    width: 100%;
    object-fit: contain;
}

header,
main>.container {
    z-index: 100;
}

div.gallery {
    margin: 5px;
    border: 1px solid #ccc;
    display: inline-block;
    width: 500px;
}

div.gallery:hover {
    border: 1px solid rgb(199, 199, 199);
}

div.gallery img {
    width: 100%;
    height: auto;
}

div.desc {
    padding: 12px;
    text-align: center;
    color: black;
}

.container-styled {
    background: #f7f7f7;

    box-shadow: inset 0 1px 5px #00000020, 0 1px #ffffff20;
    color: #ffffff;
    padding: 30px;

}

p {
    font-family: "Hind", sans-serif;
    font-style: normal;
    color: #212121;
    justify-content: left;
    font-weight: 500;
}

h2 {
    font-family: "Hind", sans-serif;
    font-style: normal;
    color: #212121;
    text-align: center;
    justify-content: left;
    font-weight: 500;
}

b {
    background-color: #FFC107;
    color: white;
    font-weight: 600;
    SCALE: none;
    padding: 5px;
}

.header h1 {
    font-size: 80px;
    font-weight: 700;
    opacity: 0;
    transition: opacity 2s;
    color: #ffffff;
}

/* HeaderInfo ^ */

